изменения для git

--- a/2.html
+++ b/2.html
@@ -13,7 +13,7 @@
 -->
 <script>
   "use strict";
-
+// для commita git
   const post = {
     author: "John", // вывести этот текст
     postId: 23,
