--- a/2.html
+++ b/2.html
@@ -43,6 +43,9 @@
   console.log(post.comments[0].rating.dislikes)
   console.log(post.comments[1].userId)
   console.log(post.comments[1].text)
+  // fsflsfsklffsfsf
+  //asa'dl'ad'a'd
+  //asds'as';al'ald
 </script>
 </body>
 </html>
