--- a/5.html
+++ b/5.html
@@ -7,7 +7,7 @@
 <body>
 <!--
 Необязательное задание.
-
+//лжжлжжлжлыжл
 Вывести с помощью цикла for числа от 0 до 9, НЕ используя тело цикла. То есть
 выглядеть должно примерно так:
 
