--- a/3.html
+++ b/3.html
@@ -7,7 +7,7 @@
 <body>
 <!--
 Обязательное задание.
-
+// аыжыждыдалылжыдалы
 Дан массив products, необходимо цену каждого продукта уменьшить на 15% используя
 метод forEach.
 -->
