--- a/4.html
+++ b/4.html
@@ -7,7 +7,7 @@
 <body>
 <!--
 Обязательное задание.
-
+//ажылжджыаждыл
 1. Необходимо вывести в консоль массив продуктов в котором есть хоть одна
 фотография используя метод filter. Исходные данные - массив products.
 2. Необходимо отсортировать массив products используя метод sort по цене,
