--- a/6.html
+++ b/6.html
@@ -7,7 +7,7 @@
 <body>
 <!--
 Необязательное задание.
-
+/////фывфыжфлжфлжфдлв
 Необходимо вывести горку в консоль (используя цикл for), как показано на
 рисунке, только у вашей горки должно быть 20 рядов, а не 5:
 
