--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 <body>
 <!--
 Обязательное задание.
-
+готово
 Необходимо с помощью цикла for вывести следующие 11 строк в консоль:
 0 – это ноль
 1 – нечетное число
@@ -21,11 +21,11 @@
 
   for (let i = 0; i <= 10; ++i){
 	if(i === 0) {
-		console.log(`${i}` - это ноль)
+		console.log(`${i} - это ноль`)
 	} else if (i % 2) {
 		console.log(`${i} - это не четное`)
-	} elseP{
-		console.log(`${i} - это четное`
+	} else{
+		console.log(`${i} - это четное`)
 	}
 }
 </script>
