часть файл 3 остальное не осилил.

--- a/3.html
+++ b/3.html
@@ -56,13 +56,13 @@
   1. Необходимо вывести сообщение в консоль "все теги прогрузились", когда все
   теги будут созданы браузером.
   */
-
+  document.addEventListener('DOMContentLoaded', () => console.log("все теги прогрузились"));
 
   /*
   2. Необходимо вывести сообщение в консоль "страница загрузилась", когда все
   ресурсы страницы будут загружены.
   */
-
+  window.addEventListener('Load', () => console.log("страница загружена"));
 
   /*
   3. При клике на какой-либо тег на странице в консоль должно выводиться
@@ -73,7 +73,7 @@
   которому был совершен клик.
   Необходимо использовать делегирование.
   */
-
+  
 
   /*
   4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
